# pdflinkin

./: .env.example  .gitignore  HANDOFF.md  HANDOVER.md  README.md  app-plan.md  package-lock.json  package.json  plan.md
scripts/: copy-pdf-worker.mjs
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shell/: index.html
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  loading.tsx
src/app/api/unfurl/: route.ts
src/app/auth/callback/: route.ts
src/app/board/: loading.tsx  page.tsx
src/app/login/: page.tsx
src/components/board/: BoardClient.tsx  BoardSwitcher.tsx  Canvas.tsx  DrawLayer.tsx  GroupLasso.tsx  Inspector.tsx  ListPanel.tsx  SearchPalette.tsx  Toolbar.tsx  TrashPanel.tsx  Viewer.tsx  useBoardActions.ts  useIngest.ts  useLinkBackfill.ts  usePdfBackfill.ts  useRealtime.ts
src/components/board/nodes/: CardShell.tsx  FrameNode.tsx  ImageNode.tsx  LinkNode.tsx  NoteNode.tsx  PdfNode.tsx  types.ts
src/lib/: geometry.ts  palette.ts  pdf.ts  storage.ts  types.ts  url.ts
src/lib/supabase/: client.ts  env.ts  server.ts
src/store/: board.ts  groupMode.ts  selection.ts  viewer.ts
supabase/migrations/: 0001_init.sql  0002_realtime.sql
whale-extension/: README.md  api.js  background.js  config.js  dropzone.js  manifest.json  popup.css  popup.html  popup.js
